# zocket-assignment

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
requirements/: requirements-dev.txt  requirements.txt
src/: app.py  retrieve.py  ui.py  utils.py
